src/sass/style.scss
@import url("https://fonts.googleapis.com/css?family=Noto+Emoji&display=swap&text=💼🏢🏆🫶⚒️📄👍");

:root {
  @supports (color: color(display-p3 1 1 1)) {
    --color-primary: color(display-p3 1 0.32 0.285);
    --color-link: color(display-p3 0 0.25 1 / 1);
    --color-background: color(display-p3 0.98 0.98 0.98);
  }
  @supports not (color: color(display-p3 1 1 1)) {
    --color-primary: #ff5249;
    --color-link: #0040ff;
    --color-background: #f8f9fa;
  }
}

@keyframes cursor-blink {
  0% {
    opacity: 0;
  }
}

/* Heading styles */

h1 {
  font-size: 1.5rem;
  margin: 0;
  text-transform: uppercase;
  font-weight: 500;
  color: var(--color-primary);
}

h2 {
  font-size: 1.7rem;
  font-family: "Noto Emoji";
  color: var(--color-primary);
  margin: 0;
}

h3 {
  font-weight: 500;
  font-size: 0.85rem;
  margin: 0.5rem 0 0 0;
}

body {
  line-height: 1.333rem;

  font-family: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono",
    "Roboto Mono", "Oxygen Mono", "Ubuntu Monospace", "Source Code Pro",
    "Fira Mono", "Droid Sans Mono", "Courier New", monospace;
  text-transform: lowercase;
  background-color: var(--color-background);

  @media (min-width: 992px) {
    padding: 2rem 3rem;
    max-width: 40vw;
    font-size: 0.85rem;
  }

  @media (min-width: 768px) and (max-width: 991px) {
    padding: 2rem 2rem;
    max-width: 60vw;
    font-size: 0.85rem;
  }

  @media (min-width: 768px) {
    #projects dl {
      @supports (column-count: 2) {
        column-count: 2;
        column-width: 50%;
      }
      dt {
        text-transform: uppercase;
        font-weight: 600;
        @supports (column-span: all) {
          column-span: all;
        }
      }
      dd {
        display: block;
        line-height: 1.33rem;
      }
    }
  }

  @media (min-width: 576px) and (max-width: 767px) {
    padding: 2rem 1rem;
    max-width: 80vw;
    font-size: 1rem;
  }

  @media (max-width: 575px) {
    padding: 2rem 1rem;
    max-width: 100vw;
    font-size: 1rem;
    dd span {
      display: inline-block;
    }
    dt {
      line-height: 2rem;
    }
  }

  @media (min-width: 575px) {
    footer {
      display: flex;
      flex-direction: row;
      justify-content: space-between;
    }
  }
}

p#summary {
  &:after {
    margin-left: -0.45rem;
    background-color: var(--color-primary);
    content: "_";
    animation: cursor-blink 1.333s steps(2) infinite;
  }
}

.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0, 0, 0, 0);
  clip-path: inset(50%);
  white-space: nowrap;
  border: 0;
  text-transform: capitalize;
}

footer {
  border-top: var(--color-primary) 1px solid;
  padding-top: 1rem;
  text-transform: uppercase;

  ul {
    display: inline;
    list-style: none;
    padding-left: 0;

    li {
      display: inline;
      &:not(:last-child):after {
        content: "/";
      }
    }
  }
}

section {
  margin-top: 4rem;
  time {
    opacity: 60%;
  }
}

figure {
  margin: 2rem 0;

  blockquote {
    margin-left: 0.25rem;
    border-left: var(--color-primary) 1px solid;
    padding-left: 0.75rem;
  }

  figcaption {
    font-weight: 600;
    text-transform: uppercase;
  }
}

/* Indent company names */
#work {
  dt {
    margin-left: 3.1rem;
    @media (max-width: 767px) {
      margin-left: 3.5rem;
    }
  }
}

dt {
  text-transform: uppercase;
  font-weight: 600;
  margin-top: 1.5rem;
}

li,
dd {
  display: flex;
  flex-direction: row;
  gap: 1rem;
  margin: 0;
  @media (max-width: 575px) {
    line-height: 1.6rem;
  }
  a {
    color: var(--color-link);
    text-decoration: none;

    &:hover {
      text-decoration: none;
      color: #fff;
      background-color: var(--color-link);
      padding: 0.125rem 0.33rem;
      margin: -0.125rem -0.33rem;
    }
    &:focus-visible {
      text-decoration: none;
      color: #fff;
      background-color: var(--color-link);
      padding: 0.125rem 0.33rem;
      margin: -0.125rem -0.33rem;
      outline: 2px solid var(--color-link);
      outline-offset: 2px;
    }
  }
  span {
    flex: 1;
  }
}

ul {
  list-style-type: none;
  margin-left: 0;
  padding-left: 0;
}

